@@ -15,18 +15,15 @@
  */
 package com.stormpath.sdk.servlet.filter.account;
 
-import com.stormpath.sdk.authc.AuthenticationResult;
-import com.stormpath.sdk.client.Client;
-import com.stormpath.sdk.lang.Assert;
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.JwsHeader;
-import io.jsonwebtoken.SignatureAlgorithm;
+import com.stormpath.sdk.authc.*;
+import com.stormpath.sdk.client.*;
+import com.stormpath.sdk.impl.util.*;
+import com.stormpath.sdk.lang.*;
+import io.jsonwebtoken.*;
 
-import javax.crypto.spec.SecretKeySpec;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.xml.bind.DatatypeConverter;
-import java.security.Key;
+import javax.crypto.spec.*;
+import javax.servlet.http.*;
+import java.security.*;
 
 /**
  * @since 1.0.RC3
@@ -65,7 +62,7 @@ public class DefaultJwtSigningKeyResolver implements JwtSigningKeyResolver {
         String apiKeySecret = client.getApiKey().getSecret();
 
         //Stormpath API Keys are base-64-encoded secure random byte arrays:
-        byte[] apiKeySecretBytes = DatatypeConverter.parseBase64Binary(apiKeySecret);
+        byte[] apiKeySecretBytes = Base64.decodeBase64(apiKeySecret);
 
         return new SecretKeySpec(apiKeySecretBytes, alg.getJcaName());
 
